--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vite-plugin-netlify": "^0.0.0-alpha.0",
+    "vite-plugin-static-copy": "^3.1.2"
   }
 }
